removed background position fixed on mobile (768px and smaller)

--- a/styles/sass/_fonts-general-styles.scss
+++ b/styles/sass/_fonts-general-styles.scss
@@ -165,7 +165,7 @@ section.opener-section,
 header,
 .projects-section,
 .img-background {
-    background: $main;
+    background: $white;
     background: $background-img;
     background-attachment: fixed;
     background-size: cover;
