--- a/styles/sass/_media-q.scss
+++ b/styles/sass/_media-q.scss
@@ -10,18 +10,6 @@
 
 // Portrait tablet and small desktops
 @media (max-width: 990px) {
-
-
-    :root { background-attachment: fixed; }
-    // section.opener-section,
-    // header,
-    // .projects-section,
-    // .img-background {
-    //     background-attachment:scroll
-    // }
-
-
-
     //fonts
     h1 {font-size: 3.5rem;}
     h2 {
@@ -67,6 +55,15 @@
 
 // Landscape phone to portrait tablet
 @media (max-width: 768px) {
+    //remove position fixed backgrounds
+    section.opener-section {
+        background-attachment: scroll;
+    }
+    header,
+    .projects-section,
+    .img-background {
+        background: $white;
+    }
     //fonts
     h1,
     h2 {font-size: 3rem;}
